--- a/public/index.html
+++ b/public/index.html
@@ -92,9 +92,10 @@
                             class="mdl-navigation mdl-layout--large-screen-only"
                         >
                             <a class="mdl-navigation__link" href="/">Feed</a>
-                            <a class="mdl-navigation__link" href="/help"
+                            <a class="mdl-navigation__link" href="/view/help.html"
                                 >Help</a
                             >
+                            <a class="mdl-navigation__link" href="/view/carousel.html">Carousel</a>
                             <div class="drawer-option">
                                 <button
                                     class="
@@ -114,7 +115,8 @@
                     <span class="mdl-layout-title">Idyllica</span>
                     <nav class="mdl-navigation">
                         <a class="mdl-navigation__link" href="/">Feed</a>
-                        <a class="mdl-navigation__link" href="/help">Help</a>
+                        <a class="mdl-navigation__link" href="/view/help.html">Help</a>
+                        <a class="mdl-navigation__link" href="/view/carousel.html">Carousel</a>
                         <div class="drawer-option">
                             <button
                                 class="
